[gd_scene load_steps=49 format=3 uid="uid://b2yut4m6ntcpe"]

[ext_resource type="Script" path="res://multiple.gd" id="1_3h47u"]
[ext_resource type="Texture2D" uid="uid://dx5ttqock7s5f" path="res://sigils/wizard.jpeg" id="1_jbssy"]
[ext_resource type="PackedScene" uid="uid://c0exvi6t1bmh6" path="res://jobs.tscn" id="3_kgpsw"]
[ext_resource type="PackedScene" uid="uid://d3pianbsohu2f" path="res://job_chooser.tscn" id="4_8y5g6"]
[ext_resource type="PackedScene" uid="uid://bquwmvh6fondc" path="res://character_select.tscn" id="5_c1dta"]
[ext_resource type="PackedScene" uid="uid://bld5a5a8ytxna" path="res://upgrade.tscn" id="6_cu2m8"]
[ext_resource type="Texture2D" uid="uid://pjb6bcs7rpgs" path="res://eviction.png" id="7_ffk07"]
[ext_resource type="Texture2D" uid="uid://cdiqke6klity3" path="res://scrolls/body2.png" id="8_lo26h"]
[ext_resource type="Texture2D" uid="uid://dn0xp43bi3ojv" path="res://scrolls/body2_hover.png" id="9_g1d17"]
[ext_resource type="Texture2D" uid="uid://5ykbcjkkjaf4" path="res://scrolls/body2_pressed.png" id="10_mp2vx"]
[ext_resource type="AudioStream" uid="uid://w3qgwrqph8d7" path="res://Vibing Over Venus.mp3" id="11_f4mm6"]
[ext_resource type="Texture2D" uid="uid://bpbpbmpovbn38" path="res://title.png" id="11_hbun4"]
[ext_resource type="Texture2D" uid="uid://e3o0ef47iu7s" path="res://promo.png" id="12_ep86b"]
[ext_resource type="Texture2D" uid="uid://caxo5mqxwchmg" path="res://scrolls/end.png" id="13_6xq4e"]
[ext_resource type="VideoStream" path="res://sigil_how_to.ogv" id="13_uqvx3"]
[ext_resource type="Texture2D" uid="uid://bdjsso6mg7l0j" path="res://sigils/sprite_3.png" id="14_evc1x"]
[ext_resource type="Texture2D" uid="uid://c31uvjy60u644" path="res://scrolls/body1.png" id="15_2bxhi"]
[ext_resource type="Texture2D" uid="uid://5mrd6i3yy382" path="res://scrolls/body1_hover.png" id="16_3raap"]
[ext_resource type="Texture2D" uid="uid://dlsgtgucjqchw" path="res://sigils/b3.png" id="16_s0u54"]
[ext_resource type="Texture2D" uid="uid://dkb6audaosec1" path="res://scrolls/body1_pressed.png" id="17_kdj7d"]
[ext_resource type="Texture2D" uid="uid://beemmj8k0e5i5" path="res://sigils/b6.png" id="17_qh1cv"]
[ext_resource type="Texture2D" uid="uid://c8ikyt0jkrxov" path="res://uncooked.png" id="21_6x3ww"]
[ext_resource type="Texture2D" uid="uid://dn3xt7hww8l2q" path="res://cooked.png" id="22_1gc4b"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h6erk"]
bg_color = Color(0, 0.0901961, 0.282353, 1)

[sub_resource type="LabelSettings" id="LabelSettings_yia1k"]
font_size = 64
outline_size = 4

[sub_resource type="LabelSettings" id="LabelSettings_b4sc1"]
font_size = 32
outline_size = 3

[sub_resource type="LabelSettings" id="LabelSettings_gl1f1"]
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_8gea1"]
font_size = 32
outline_size = 4

[sub_resource type="LabelSettings" id="LabelSettings_etbnl"]
font_size = 64
font_color = Color(0, 0.678431, 0, 1)
outline_size = 4
outline_color = Color(0, 0.678431, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_lu0ca"]
font_size = 64
font_color = Color(0.941176, 0.176471, 0.227451, 1)
outline_size = 4
outline_color = Color(0.941176, 0.176471, 0.227451, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cl45f"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="Gradient" id="Gradient_st1js"]
offsets = PackedFloat32Array(0.00377357, 1)
colors = PackedColorArray(0.917647, 0.898039, 0.94902, 1, 0.917647, 0.898039, 0.94902, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_ruod5"]
gradient = SubResource("Gradient_st1js")

[sub_resource type="LabelSettings" id="LabelSettings_k3sy7"]
font_size = 56
font_color = Color(0, 0, 0, 1)
outline_size = 9
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_c6txb"]
font_size = 56
font_color = Color(0, 0, 0, 1)
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_kio6e"]
texture = ExtResource("8_lo26h")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4utq0"]
texture = ExtResource("9_g1d17")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_q5871"]
texture = ExtResource("10_mp2vx")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v3tvj"]
bg_color = Color(0.941176, 0.729412, 0.815686, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yr6mb"]
bg_color = Color(0.952941, 0.760784, 0.843137, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4r7i7"]
bg_color = Color(0.92549, 0.670588, 0.780392, 1)

[sub_resource type="Gradient" id="Gradient_lkhik"]
offsets = PackedFloat32Array(0.00377357, 1)
colors = PackedColorArray(0.917647, 0.898039, 0.94902, 1, 0.917647, 0.898039, 0.94902, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_gpi8t"]
gradient = SubResource("Gradient_lkhik")

[sub_resource type="LabelSettings" id="LabelSettings_mkb0c"]
font_size = 72
outline_size = 3

[sub_resource type="LabelSettings" id="LabelSettings_q1xv8"]
font_size = 32

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_udd7x"]
texture = ExtResource("15_2bxhi")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mhf46"]
texture = ExtResource("16_3raap")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_wtsja"]
texture = ExtResource("17_kdj7d")

[node name="multiple" type="Node2D"]
script = ExtResource("1_3h47u")
should_pick_job = true

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="Panel" type="Panel" parent="CanvasLayer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(2.08165e-12, 200)
layout_mode = 2
size_flags_stretch_ratio = 0.0
theme_override_styles/panel = SubResource("StyleBoxFlat_h6erk")

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 200.0
grow_vertical = 2
texture = ExtResource("1_jbssy")
expand_mode = 1

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -3.0
offset_top = -12.0
offset_right = -23.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 2
text = "$0"
label_settings = SubResource("LabelSettings_yia1k")
horizontal_alignment = 2
vertical_alignment = 1

[node name="Label4" type="Label" parent="CanvasLayer/VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 395.0
offset_top = 66.0
offset_right = -25.0
offset_bottom = 34.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 48
text = "Rent Money"
label_settings = SubResource("LabelSettings_b4sc1")
horizontal_alignment = 2
vertical_alignment = 1

[node name="Label3" type="Label" parent="CanvasLayer/VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 827.0
offset_top = 96.0
offset_right = -272.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 48
text = "Base Pay"
label_settings = SubResource("LabelSettings_b4sc1")
vertical_alignment = 1

[node name="in" type="Label" parent="CanvasLayer/VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 847.0
offset_top = 51.0
offset_right = -252.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 48
text = "in"
label_settings = SubResource("LabelSettings_gl1f1")
vertical_alignment = 1

[node name="time" type="Label" parent="CanvasLayer/VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 877.0
offset_top = 30.0
offset_right = -282.0
offset_bottom = -36.0
grow_horizontal = 2
grow_vertical = 2
text = "00:00"
label_settings = SubResource("LabelSettings_8gea1")
vertical_alignment = 1

[node name="base" type="Label" parent="CanvasLayer/VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 634.0
offset_top = 19.0
offset_right = -450.0
offset_bottom = -47.0
grow_horizontal = 2
grow_vertical = 2
text = "+$10"
label_settings = SubResource("LabelSettings_etbnl")
horizontal_alignment = 2
vertical_alignment = 1

[node name="Label5" type="Label" parent="CanvasLayer/VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 370.0
offset_top = 96.0
offset_right = -729.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 48
text = "Rent"
label_settings = SubResource("LabelSettings_b4sc1")
horizontal_alignment = 2
vertical_alignment = 1

[node name="in2" type="Label" parent="CanvasLayer/VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 428.0
offset_top = 53.0
offset_right = -671.0
offset_bottom = -48.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 48
text = "in"
label_settings = SubResource("LabelSettings_gl1f1")
vertical_alignment = 1

[node name="renttime" type="Label" parent="CanvasLayer/VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 462.0
offset_top = 30.0
offset_right = -577.0
offset_bottom = -36.0
grow_horizontal = 2
grow_vertical = 2
text = "00:00"
label_settings = SubResource("LabelSettings_8gea1")
vertical_alignment = 1

[node name="rent" type="Label" parent="CanvasLayer/VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 214.0
offset_top = 20.0
offset_right = -870.0
offset_bottom = -46.0
grow_horizontal = 2
grow_vertical = 2
text = "-$10"
label_settings = SubResource("LabelSettings_lu0ca")
horizontal_alignment = 2
vertical_alignment = 1

[node name="Jobs" parent="CanvasLayer/VBoxContainer" instance=ExtResource("3_kgpsw")]
process_mode = 4
visible = false
layout_mode = 2

[node name="JobChooser" parent="CanvasLayer/VBoxContainer" instance=ExtResource("4_8y5g6")]
process_mode = 4
visible = false
layout_mode = 2

[node name="CharacterSelect" parent="CanvasLayer/VBoxContainer" instance=ExtResource("5_c1dta")]
process_mode = 4
visible = false
layout_mode = 2

[node name="Upgrade" parent="CanvasLayer/VBoxContainer" instance=ExtResource("6_cu2m8")]
process_mode = 4
visible = false
layout_mode = 2

[node name="Opening" type="Panel" parent="CanvasLayer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_cl45f")

[node name="Eviction" type="Sprite2D" parent="CanvasLayer/VBoxContainer/Opening"]
position = Vector2(643.528, 465.495)
rotation = 0.0942478
scale = Vector2(1.5, 1.5)
texture = ExtResource("7_ffk07")

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer/VBoxContainer/Opening/Eviction"]
z_index = -1
offset_left = -484.0
offset_top = -470.0
offset_right = 531.0
offset_bottom = 567.0
texture = SubResource("GradientTexture1D_ruod5")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer/Opening"]
layout_mode = 0
offset_left = 401.528
offset_top = 651.495
offset_right = 795.528
offset_bottom = 745.495
rotation = 0.0994838
text = "Owed: $2,500"
label_settings = SubResource("LabelSettings_k3sy7")

[node name="Label2" type="Label" parent="CanvasLayer/VBoxContainer/Opening"]
layout_mode = 0
offset_left = 302.0
offset_top = 901.0
offset_right = 1007.0
offset_bottom = 995.0
text = "Ugh, I better get to work..."
label_settings = SubResource("LabelSettings_c6txb")

[node name="Button" type="Button" parent="CanvasLayer/VBoxContainer/Opening"]
layout_mode = 0
offset_left = 942.0
offset_top = 1064.0
offset_right = 1247.0
offset_bottom = 1191.0
size_flags_vertical = 3
theme_override_font_sizes/font_size = 48
theme_override_styles/normal = SubResource("StyleBoxTexture_kio6e")
theme_override_styles/hover = SubResource("StyleBoxTexture_4utq0")
theme_override_styles/pressed = SubResource("StyleBoxTexture_q5871")
text = "Continue
"

[node name="Menu" type="Panel" parent="CanvasLayer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_cl45f")

[node name="Eviction" type="Sprite2D" parent="CanvasLayer/VBoxContainer/Menu"]
position = Vector2(634.073, 578.33)
rotation = -0.155334
scale = Vector2(1.5, 1.5)
texture = ExtResource("11_hbun4")

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer/VBoxContainer/Menu/Eviction"]
z_index = -1
offset_left = -509.667
offset_top = -462.078
offset_right = 505.333
offset_bottom = 574.922
texture = SubResource("GradientTexture1D_ruod5")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer/Menu"]
layout_mode = 0
offset_left = 480.545
offset_top = 816.835
offset_right = 874.545
offset_bottom = 910.835
rotation = -0.155334
text = "Owed: $2,500"
label_settings = SubResource("LabelSettings_k3sy7")

[node name="Button" type="Button" parent="CanvasLayer/VBoxContainer/Menu"]
layout_mode = 0
offset_left = 310.0
offset_top = 684.0
offset_right = 978.0
offset_bottom = 812.0
rotation = -0.155334
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0.956863, 0.803922, 0.866667, 0.517647)
theme_override_colors/icon_pressed_color = Color(0.956863, 0.803922, 0.866667, 1)
theme_override_colors/icon_hover_color = Color(0.956863, 0.803922, 0.866667, 1)
theme_override_colors/icon_hover_pressed_color = Color(0.956863, 0.803922, 0.866667, 1)
theme_override_colors/icon_focus_color = Color(0.956863, 0.803922, 0.866667, 1)
theme_override_colors/icon_disabled_color = Color(0.956863, 0.803922, 0.866667, 1)
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxFlat_v3tvj")
theme_override_styles/hover = SubResource("StyleBoxFlat_yr6mb")
theme_override_styles/pressed = SubResource("StyleBoxFlat_4r7i7")
text = "START"

[node name="HowToSigil" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="Panel2" type="Panel" parent="CanvasLayer/VBoxContainer/HowToSigil"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(2.08165e-12, 200)
layout_mode = 2
size_flags_horizontal = 3

[node name="Promo" type="Sprite2D" parent="CanvasLayer/VBoxContainer/HowToSigil"]
position = Vector2(639, 748)
rotation = -3.14159
scale = Vector2(2.30652, 2.30652)
texture = ExtResource("12_ep86b")

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer/VBoxContainer/HowToSigil/Promo"]
z_index = -1
offset_left = -282.0
offset_top = -215.0
offset_right = 279.0
offset_bottom = 331.0
texture = SubResource("GradientTexture1D_gpi8t")
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/VBoxContainer/HowToSigil"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.71

[node name="Panel" type="Panel" parent="CanvasLayer/VBoxContainer/HowToSigil/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(2.08165e-12, 200)
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer/HowToSigil/VBoxContainer"]
layout_mode = 2
text = "Teleporter for Dummies"
label_settings = SubResource("LabelSettings_mkb0c")
horizontal_alignment = 1

[node name="Panel2" type="Panel" parent="CanvasLayer/VBoxContainer/HowToSigil/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(2.08165e-12, 80)
layout_mode = 2

[node name="choose" type="Label" parent="CanvasLayer/VBoxContainer/HowToSigil/VBoxContainer"]
layout_mode = 2
text = "See Pattern"
label_settings = SubResource("LabelSettings_q1xv8")

[node name="TextureProgressBar" type="TextureProgressBar" parent="CanvasLayer/VBoxContainer/HowToSigil/VBoxContainer"]
layout_mode = 2
value = 40.0
texture_progress = ExtResource("8_lo26h")

[node name="choose2" type="Label" parent="CanvasLayer/VBoxContainer/HowToSigil/VBoxContainer"]
layout_mode = 2
text = "Copy Pattern"
label_settings = SubResource("LabelSettings_q1xv8")

[node name="Panel5" type="Panel" parent="CanvasLayer/VBoxContainer/HowToSigil/VBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(2.08165e-12, 400)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.37

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="CanvasLayer/VBoxContainer/HowToSigil/VBoxContainer/Panel5"]
layout_mode = 0
offset_left = 17.0
offset_top = 4.0
offset_right = 1233.0
offset_bottom = 676.0
scale = Vector2(0.6, 0.6)
stream = ExtResource("13_uqvx3")
autoplay = true
loop = true

[node name="End" type="Sprite2D" parent="CanvasLayer/VBoxContainer/HowToSigil/VBoxContainer"]
position = Vector2(8.5, 485)
texture = ExtResource("13_6xq4e")

[node name="1" type="Sprite2D" parent="CanvasLayer/VBoxContainer/HowToSigil/VBoxContainer"]
position = Vector2(46.5, 486)
texture = ExtResource("14_evc1x")

[node name="2" type="Sprite2D" parent="CanvasLayer/VBoxContainer/HowToSigil/VBoxContainer"]
position = Vector2(83.5, 486)
texture = ExtResource("16_s0u54")

[node name="3" type="Sprite2D" parent="CanvasLayer/VBoxContainer/HowToSigil/VBoxContainer"]
position = Vector2(119.5, 486)
texture = ExtResource("17_qh1cv")

[node name="End2" type="Sprite2D" parent="CanvasLayer/VBoxContainer/HowToSigil/VBoxContainer"]
position = Vector2(149.5, 485)
texture = ExtResource("13_6xq4e")

[node name="how_to" type="Button" parent="CanvasLayer/VBoxContainer/HowToSigil/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 200)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxTexture_udd7x")
theme_override_styles/hover = SubResource("StyleBoxTexture_mhf46")
theme_override_styles/pressed = SubResource("StyleBoxTexture_wtsja")
text = "Start
"

[node name="Panel4" type="Panel" parent="CanvasLayer/VBoxContainer/HowToSigil"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(2.08165e-12, 200)
layout_mode = 2
size_flags_horizontal = 3

[node name="HowToFlames" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="Panel2" type="Panel" parent="CanvasLayer/VBoxContainer/HowToFlames"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(2.08165e-12, 200)
layout_mode = 2
size_flags_horizontal = 3

[node name="Promo" type="Sprite2D" parent="CanvasLayer/VBoxContainer/HowToFlames"]
position = Vector2(639, 748)
rotation = -3.14159
scale = Vector2(2.30652, 2.30652)
texture = ExtResource("12_ep86b")

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer/VBoxContainer/HowToFlames/Promo"]
z_index = -1
offset_left = -282.0
offset_top = -215.0
offset_right = 279.0
offset_bottom = 331.0
texture = SubResource("GradientTexture1D_gpi8t")
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/VBoxContainer/HowToFlames"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.71

[node name="Panel" type="Panel" parent="CanvasLayer/VBoxContainer/HowToFlames/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(2.08165e-12, 200)
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer/HowToFlames/VBoxContainer"]
layout_mode = 2
text = "Chef for Dummies"
label_settings = SubResource("LabelSettings_mkb0c")
horizontal_alignment = 1

[node name="Panel2" type="Panel" parent="CanvasLayer/VBoxContainer/HowToFlames/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(2.08165e-12, 80)
layout_mode = 2

[node name="choose2" type="Label" parent="CanvasLayer/VBoxContainer/HowToFlames/VBoxContainer"]
layout_mode = 2
text = "Press and Hold chicken to Cook"
label_settings = SubResource("LabelSettings_q1xv8")

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/VBoxContainer/HowToFlames/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/VBoxContainer/HowToFlames/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 2.08165e-12)
layout_mode = 2
texture = ExtResource("21_6x3ww")
expand_mode = 5

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer/VBoxContainer/HowToFlames/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 2.08165e-12)
layout_mode = 2
texture = ExtResource("21_6x3ww")
expand_mode = 5

[node name="TextureProgressBar" type="TextureProgressBar" parent="CanvasLayer/VBoxContainer/HowToFlames/VBoxContainer/HBoxContainer/TextureRect2"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(0.355, 0.355)
value = 33.0
texture_progress = ExtResource("22_1gc4b")

[node name="TextureRect3" type="TextureRect" parent="CanvasLayer/VBoxContainer/HowToFlames/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 2.08165e-12)
layout_mode = 2
texture = ExtResource("21_6x3ww")
expand_mode = 5

[node name="TextureProgressBar" type="TextureProgressBar" parent="CanvasLayer/VBoxContainer/HowToFlames/VBoxContainer/HBoxContainer/TextureRect3"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(0.355, 0.355)
value = 66.0
texture_progress = ExtResource("22_1gc4b")

[node name="TextureRect4" type="TextureRect" parent="CanvasLayer/VBoxContainer/HowToFlames/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 2.08165e-12)
layout_mode = 2
texture = ExtResource("21_6x3ww")
expand_mode = 5

[node name="TextureProgressBar" type="TextureProgressBar" parent="CanvasLayer/VBoxContainer/HowToFlames/VBoxContainer/HBoxContainer/TextureRect4"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(0.355, 0.355)
value = 100.0
texture_progress = ExtResource("22_1gc4b")

[node name="Panel5" type="Panel" parent="CanvasLayer/VBoxContainer/HowToFlames/VBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(2.08165e-12, 300)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.37

[node name="how_to" type="Button" parent="CanvasLayer/VBoxContainer/HowToFlames/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 200)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxTexture_udd7x")
theme_override_styles/hover = SubResource("StyleBoxTexture_mhf46")
theme_override_styles/pressed = SubResource("StyleBoxTexture_wtsja")
text = "Start
"

[node name="Panel4" type="Panel" parent="CanvasLayer/VBoxContainer/HowToFlames"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(2.08165e-12, 200)
layout_mode = 2
size_flags_horizontal = 3

[node name="MainTimer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true

[node name="RentTimer" type="Timer" parent="."]
wait_time = 120.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_f4mm6")
autoplay = true

[connection signal="level_up" from="CanvasLayer/VBoxContainer/Jobs" to="." method="_on_jobs_level_up"]
[connection signal="score" from="CanvasLayer/VBoxContainer/Jobs" to="." method="_on_score"]
[connection signal="pick_job" from="CanvasLayer/VBoxContainer/JobChooser" to="." method="pick_job"]
[connection signal="choose_character" from="CanvasLayer/VBoxContainer/CharacterSelect" to="." method="_on_character_select_choose_character"]
[connection signal="upgrade" from="CanvasLayer/VBoxContainer/Upgrade" to="." method="_on_upgrade_upgrade"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Opening/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Menu/Button" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/HowToSigil/VBoxContainer/how_to" to="." method="_on_how_to_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/HowToFlames/VBoxContainer/how_to" to="." method="_on_how_to_pressed"]
[connection signal="timeout" from="MainTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="RentTimer" to="." method="_on_rent_timer_timeout"]
